# luogu-AI-report

./: .gitignore  Dockerfile  GESPшАГч║▓.pdf.txt  NOIхдзч║▓_Syllabus_Edition_2025.pdf.txt  README.md  activation_codes.py  admin_goals.py  admin_guardians.py  admin_nav.html  admin_students.py  behavior_analyzer.py  build-and-ship.ps1  camp_curriculum.py  clear_done_tasks.py  deploy-image.sh  deploy.ps1  import_competitions.py  luogu_evaluator.py  make_zip.ps1  migrate_luogu_uid.py  mistake_book.py  noi大纲.pdf.txt  phase3_dashboard.py  pyproject.toml  report_template.html  requirements.txt  run_all_smoke.py  seed_demo_students.py  studymate_panel.py  task_store.py  task_store.py.broken  tasks.db  test_admin_students_routes.py  test_closed_beta_doc.py  test_cookie_parser.py  test_debug_patience_v2.py  test_evolution.py  test_phase3_full.py  test_poster_wrap.py  test_student_profile_v353.py  (+11 more)
.preimage_bak/: web_app.py
.source_cache/1351761/: B2054.json  B2055.json  B2056.json  B2057.json  B2058.json  B2059.json  B2060.json  B2061.json  B2062.json  B2063.json  B2064.json  B2065.json  B2066.json  (+938 more)
docs/: ai-math-mistake-homework-entry-copy-doc.md  competitions.json  gesp_estimator.py  studymate_bridge.py  task_store_migration_v3.5.sql  封闭测试指引_真实教练30天.md  开发计划_v2.md  开发计划_v3.5.md
examples/: LACPT_autotest.py  export_for_ai.py
pyLuogu/: api.py  async_api.py  normalizers.py
tests/: test_evaluator.py  test_report_hide_db.py  test_report_hide_extract.py  test_report_hide_routes.py  test_report_hide_templates.py  test_web_app_template.py
tools/: fetch_school_logos.py
(+5366 files in other folders)
