[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luogu-api-python"
version = "0.0.2"
description = "A Python library to interact with the Luogu online judge system"
readme = "README.md"
authors = [
    { name = "bzy", email = "bzy.cirno@gmail.com" },
    { name = "Camber Huang", email = "camber@poi.science" }
]
license = { file = "LICENSE" }
dependencies = [
    "httpx",
    "beautifulsoup4"
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Education"
]

[project.urls]
Homepage = "https://github.com/NekoOS-Group/luogu-api-python" 

[tool.setuptools.packages.find]
include = ["pyLuogu*"]

[project.optional-dependencies]
dev = [
    "openai"
]
coach = [
    "openai",
    "rich",
    "matplotlib",
    "reportlab"
]
